--- a/build.gradle
+++ b/build.gradle
@@ -79,9 +79,9 @@ dependencies {
     minecraft "net.minecraftforge:forge:${project.minecraft}-${project.forge}"
     implementation fg.deobf("com.teamabnormals:blueprint:${project.minecraft}-${project.blueprint}")
 
-    compileOnly fg.deobf("maven.modrinth:moonlight:1.19.2-2.3.4-forge")
-    compileOnly fg.deobf("maven.modrinth:supplementaries:1.19.2-2.4.5-forge")
-    compileOnly fg.deobf("maven.modrinth:create:1.19.2-0.5.1.f")
+    compileOnly fg.deobf("maven.modrinth:moonlight:vivHKObd")
+    compileOnly fg.deobf("maven.modrinth:supplementaries:roUQhhcO")
+    compileOnly fg.deobf("maven.modrinth:create:HNYrbfZZ")
 
     compileOnly fg.deobf("mezz.jei:jei-${project.minecraft}-common-api:${project.jei}")
     compileOnly fg.deobf("mezz.jei:jei-${project.minecraft}-forge-api:${project.jei}")
