--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -10,7 +10,7 @@ license = "MIT License"
     itemIcon = "just_dandy:fluffy_dandelion"
     configBackground = "minecraft:textures/block/yellow_wool.png"
     authors = "DavigJ"
-    credits = "Thanks to Ezekiel (Booleven) for the 1.19.2 port!"
+    credits = "Booleven's 1.19.2 port, and Bagel for 1.20.1 worldgen assistance"
     displayURL = "https://modrinth.com/project/just-dandy"
     displayName = "Just Dandy"
     description = '''
