atoning for worldgen sins

--- a/build.gradle
+++ b/build.gradle
@@ -82,6 +82,8 @@ dependencies {
     compileOnly fg.deobf("maven.modrinth:moonlight:vivHKObd")
     compileOnly fg.deobf("maven.modrinth:supplementaries:roUQhhcO")
     compileOnly fg.deobf("maven.modrinth:create:HNYrbfZZ")
+    implementation fg.deobf("maven.modrinth:world-of-wonder:ROod5t7t")
+    implementation fg.deobf("maven.modrinth:terrablender:HI0iCUpi")
 
     compileOnly fg.deobf("mezz.jei:jei-${project.minecraft}-common-api:${project.jei}")
     compileOnly fg.deobf("mezz.jei:jei-${project.minecraft}-forge-api:${project.jei}")
